fix: 글 조회 API 요청 및답 수정