@@ -13,16 +13,29 @@ import com.ll.demo.domain.quote.repository.QuoteRepository;
 import com.ll.demo.domain.quote.repository.QuoteTagRepository;
 import com.ll.demo.domain.quote.repository.QuoteTagRequestRepository;
 import com.ll.demo.global.exceptions.GlobalException;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.util.List;
+import com.ll.demo.global.security.SecurityUser;
+import com.ll.demo.domain.friendship.friendship.repository.FriendshipRepository;
+import com.ll.demo.domain.group.group.entity.GroupMember;
+import com.ll.demo.domain.group.group.repository.GroupMemberRepository;
+import com.ll.demo.domain.quote.dto.MyQuoteResponse;
+import com.ll.demo.domain.quote.dto.QuoteDetailResponse;
+import com.ll.demo.domain.quote.dto.QuoteListDto;
+import com.ll.demo.domain.quote.dto.QuoteResponse;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,10 +44,12 @@ public class QuoteService {
 
     private final QuoteRepository quoteRepository;
     private final QuoteLikeRepository quoteLikeRepository;
-    private final MemberRepository memberRepository; // ★ [수정] 이게 없어서 에러가 났었습니다!
+    private final MemberRepository memberRepository;
     private final QuoteTagRequestRepository quoteTagRequestRepository;
     private final QuoteTagRepository quoteTagRepository;
     private final NotificationService notificationService;
+    private final FriendshipRepository friendshipRepository;
+    private final GroupMemberRepository groupMemberRepository;
 
     // 명언 작성 (저장)
     @Transactional
@@ -94,15 +109,60 @@ public class QuoteService {
                 .ifPresent(quoteLikeRepository::delete);
     }
 
-    // 전체 명언 목록 조회 (단순 리스트)
-    public List<QuoteResponse> getQuoteList() {
-        List<Quote> quotes = quoteRepository.findAll(Sort.by(Sort.Direction.DESC, "createDate"));
-        return quotes.stream()
-                .map(QuoteResponse::from)
+    // 명언 목록 조회 - 날짜 필터링+필요정보
+    public QuoteListDto getQuoteList(Member currentUser, LocalDate date) {
+
+        LocalDateTime startDate = date.atStartOfDay();
+        LocalDateTime endDate = date.plusDays(1).atStartOfDay();
+
+        List<Quote> quotes = quoteRepository.findAllByDateRange(startDate, endDate);
+        List<MyQuoteResponse> myQuotes = quotes.stream()
+                .filter(q -> q.getAuthor().getId().equals(currentUser.getId()))
+                .map(q -> {
+                    String groupName = getQuoteGroupName(q);
+                    return MyQuoteResponse.from(q, groupName);
+                })
                 .toList();
+        List<QuoteDetailResponse> otherQuotes = quotes.stream()
+                .filter(q -> !q.getAuthor().getId().equals(currentUser.getId()))
+                .map(q -> {
+                    boolean isLiked = quoteLikeRepository.existsByQuoteAndMember(q, currentUser);
+                    boolean isFriend = friendshipRepository.existsByMemberAndFriend(currentUser, q.getAuthor());
+                    List<String> taggedNicknames = quoteTagRepository.findAllByQuote(q).stream()
+                            .map(qt -> qt.getMember().getNickname()) // 🟢 QuoteTag의 getMember() 호출
+                            // 🟢 ERROR: List<Object> -> List<String> 해결. .toList()는 Java 16 이상에서 타입 추론 가능
+                            .collect(Collectors.toList()); // 🟢 명시적 collect로 타입 오류 회피
+                    return QuoteDetailResponse.from(q, taggedNicknames, isLiked, isFriend);
+                })
+                .toList();
+
+        return new QuoteListDto(myQuotes, otherQuotes);
     }
 
-    // 명언에 태그 요청하는 메서드 - mj
+    // 명언 작성자가 속한 그룹
+    private String getQuoteGroupName(Quote quote) {
+        List<GroupMember> groupMembers = groupMemberRepository.findByMember(quote.getAuthor());
+        if (!groupMembers.isEmpty()) {
+            return groupMembers.get(0).getGroup().getName();
+        }
+        return "아직 그룹이 없습니다.";
+    }
+
+    // 로그인한 사용자
+    private Long getCurrentUserId() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated() || "anonymousUser".equals(authentication.getPrincipal())) {
+            return null; // 인증되지 않은 사용자
+        }
+
+        if (authentication.getPrincipal() instanceof SecurityUser securityUser) {
+            return securityUser.getMember().getId();
+        }
+
+        return null;
+    }
+
+    // 명언에 태그 요청하는 메서드
     @Transactional
     public void tagRequestQuote(Member requester, Long quoteId) {
         Quote quote = quoteRepository.findById(quoteId)
@@ -126,14 +186,25 @@ public class QuoteService {
         quoteTagRequestRepository.save(tagRequest);
     }
 
-    // 1. 나의 명언 목록 가져오기
-    public List<QuoteResponse> findMyQuotes(Long authorId) {
-        List<Quote> quotes = quoteRepository.findAllByAuthorIdOrderByCreateDateDesc(authorId);
+    // 🟢 1. 내가 작성한 명언 목록 조회 (ArchiveController에서 호출)
+    public List<QuoteResponse> findMyQuotes(Long memberId) {
+        // [로직] memberId를 기준으로 작성된 모든 명언을 조회합니다.
+        List<Quote> myQuotes = quoteRepository.findAllByAuthorId(memberId);
 
-        // ★ 여기서(Service 내부) 변환해야 DB 연결이 유지된 상태로 닉네임을 가져올 수 있음
-        return quotes.stream()
-                .map(QuoteResponse::new)
-                .toList();
+        return myQuotes.stream()
+                .map(QuoteResponse::from) // QuoteResponse.from(Quote) 메서드가 있다고 가정
+                .collect(Collectors.toList());
+    }
+
+    // 🟢 2. 내가 좋아요 누른 명언 목록 조회 (ArchiveController에서 호출)
+    public List<QuoteResponse> findLikedQuotes(Long memberId) {
+        // [로직] QuoteLike 엔티티를 조인하거나, 별도의 쿼리를 통해 memberId가 좋아요를 누른 명언만 조회합니다.
+        // QuoteRepository에 @Query를 사용한 메서드가 필요합니다. (아래 1단계 참고)
+        List<Quote> likedQuotes = quoteRepository.findQuotesLikedByMember(memberId);
+
+        return likedQuotes.stream()
+                .map(QuoteResponse::from) // QuoteResponse.from(Quote) 메서드가 있다고 가정
+                .collect(Collectors.toList());
     }
 
     // 2. 특정 날짜의 전체 명언 가져오기
@@ -166,16 +237,16 @@ public class QuoteService {
         quoteTagRequestRepository.save(tagRequest);
     }
 
-    // [추가] 좋아요한 글 목록 조회
-    public List<QuoteResponse> findLikedQuotes(Long memberId) {
-        // 1. DB에서 내가 좋아요한 Quote 목록 조회
-        List<Quote> likedQuotes = quoteRepository.findQuotesLikedByMember(memberId);
-
-        // 2. DTO로 변환
-        return likedQuotes.stream()
-                .map(QuoteResponse::new)
-                .toList();
-    }
+//    // [추가] 좋아요한 글 목록 조회
+//    public List<QuoteResponse> findLikedQuotes(Long memberId) {
+//        // 1. DB에서 내가 좋아요한 Quote 목록 조회
+//        List<Quote> likedQuotes = quoteRepository.findQuotesLikedByMember(memberId);
+//
+//        // 2. DTO로 변환
+//        return likedQuotes.stream()
+//                .map(QuoteResponse::new)
+//                .toList();
+//    }
 
     // 태그 수정 기능
     @Transactional
